--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 about_image: https://web.fastcrm.rocks//files/NNSTUKA/photo/12_thuisstudie-stukadoor.jpg
-accent: "#d1d1a4"
+accent: "#d1bda4"
 contact: >-
   ### **De Leemsmid**
 
