Update Settings “general”

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-about_image: https://web.fastcrm.rocks//files/NNSTUKA/photo/12_thuisstudie-stukadoor.jpg
+about_image: /assets/img_3121.jpg
 accent: "#d1cda4"
 contact: >-
   ### **De Leemsmid**
