--- a/admin/config.yml
+++ b/admin/config.yml
@@ -20,6 +20,7 @@ collections:
     editor:
       preview: true
     fields:
+      - { label: 'Gepubliceerd', name: 'published', widget: 'boolean', default: true }
       - { label: "Question", name: "question", widget: "string" }
       - { label: "Answer", name: "answer", widget: "markdown" }
       - { label: "Image", name: "image", widget: "image", choose_url: true, media_library: { config: { multiple: true }}}
@@ -31,6 +32,7 @@ collections:
     editor:
       preview: true
     fields:
+      - { label: 'Gepubliceerd', name: 'published', widget: 'boolean', default: true }
       - { label: 'Layout', name: 'layout', widget: 'hidden', default: 'showcase' }
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
@@ -41,17 +43,6 @@ collections:
         widget: "list"
         summary: '{{fields.image}}'
         field: {label: Image, name: image, widget: image}
-  - name: "experiment"
-    label: "Experiment"
-    folder: "_experiments"
-    create: true
-    slug: "{{slug}}"
-    editor:
-      preview: true
-    fields:
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Description", name: "description", widget: "markdown", required: false }
-      - { label: "Image", name: "image", widget: "image", choose_url: true, media_library: { config: { multiple: true }}}
   - name: 'settings'
     label: 'Settings'
     delete: false
@@ -65,12 +56,17 @@ collections:
         fields:
           - { label: 'Site title', name: 'title', widget: 'string' }
           - { label: 'Site slogan', name: 'slogan', widget: 'markdown' }
+          - { label: 'Accent', name: 'color_accent', widget: 'color' }
+          - { label: 'Dark color', name: 'color_dark', widget: 'color' }
+          - { label: 'Light color', name: 'color_light', widget: 'color' }
+
           - { label: 'Leemlab', name: 'lab', widget: 'markdown' }
           - { label: 'About Leemsmid', name: 'about_text', widget: 'markdown' }
-          - { label: "Image", name: "about_image", widget: "image", choose_url: true, media_library: { config: { multiple: false }}}
-          - { label: 'Accent', name: 'accent', widget: 'color' }
+          - { label: "About image", name: "about_image", widget: "image", choose_url: true, media_library: { config: { multiple: false }}}
+          - { label: "Footer image", name: "footer_image", widget: "image", choose_url: true, media_library: { config: { multiple: false }}}
           - { label: 'Phone number', name: 'phone', widget: 'string' }
           - { label: 'Email', name: 'email', widget: 'string' }
           - { label: 'Instagram', name: 'instagram', widget: 'string' }
+          - { label: 'Instagram feed on rss.app', name: 'instagram_feed', widget: 'string' }
           - { label: 'Contact', name: 'contact', widget: 'markdown' }
           - { label: "Menu background", name: "menu_image", widget: "image", choose_url: true, media_library: { config: { multiple: false }}}
