trying absolute_url

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ instagram_feed: uMytQGrvbKV1c5Vn
 sass:
   sass_dir: _sass
 phone: 06-1234 1234
-url: ""
+url: "https://leemsmid.danielbeeke.nl"
 color_dark: "#163d26"
 instagram: wilmavis
 collections:
