Update Settings “general”

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ slogan: "**Pretty leem!**"
 color_accent: "#c5d9bc"
 color_dark: "#163d26"
 color_light: "#fefefe"
-lab: In het leemlab houd ik je op de hoogte van verschillende expirimenten om
+lab: In het leemlab houd ik je op de hoogte van verschillende experimenten om
   het leemproduct nog te verbeteren, beide in constructieve integriteit en
   estetisch.
 about_text: >-
@@ -33,12 +33,12 @@ about_text: >-
   Verdere missie ergens anders lezen
 about_image: /assets/img_7011.jpg
 footer_image: /assets/footer.jpg
-phone: 06-1234 1234
+phone: 06 5194 7969
 email: info@leemsmid.nl
 instagram: wilmavis
 instagram_feed: uMytQGrvbKV1c5Vn
 contact: >-
-  ### **De Leemsmid**
+  ### **Leemsmid**
 
 
   Wilt u meer weten over ecologisch renoveren? Heeft u een muur of een huis dat leemstuc kan gebruiken? Bel gerust. Ik kom graag langs om te kijken wat allemaal mogelijk is en voorlichting te geven over deze producten.
